--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-    "version": 2,
-    "outputDirectory": "build",
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
