--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "redirects": [
+    { 
+      "source": "/:path*", 
+      "has": [{ "type": "host", "value": "pi2-smarttask-frontend.vercel.app" }],
+      "destination": "https://pi2-smarttask-frontend.vercel.app/:path*/",
+      "permanent": true
+    }
   ]
 }
