--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "homepage": "/",
   "proxy": "https://smarttask-backend-tcsj.onrender.com",
   "dependencies": {
-    "serve": "^14.2.0",
+    "apexcharts": "^4.5.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve": "^14.2.0",
     "sweetalert2": "^11.12.1"
   },
   "scripts": {
