--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "homepage": "/",
   "proxy": "https://smarttask-backend-tcsj.onrender.com",
   "dependencies": {
-    "apexcharts": "^4.0.0",
+    "apexcharts": "3.35.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.7.0",
+    "react-apexcharts": "1.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^5.2.0",
