--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "homepage": "/",
   "proxy": "https://smarttask-backend-tcsj.onrender.com",
   "dependencies": {
-    "apexcharts": "3.35.0",
-    "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-apexcharts": "1.4.0",
-    "react-dom": "^17.0.2",
-    "react-icons": "^5.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "serve": "^14.2.0",
-    "sweetalert2": "^11.12.1"
+  "apexcharts": "3.35.0",
+  "axios": "^0.21.1",
+  "google-auth-library": "^8.8.0",
+  "react": "^17.0.2",
+  "react-apexcharts": "1.4.0",
+  "react-dom": "^17.0.2",
+  "react-icons": "^5.2.1",
+  "react-router-dom": "^5.2.0",
+  "react-scripts": "4.0.3",
+  "serve": "^14.2.0",
+  "sweetalert2": "^11.12.1"
   },
   "scripts": {
     "dev": "react-scripts start",
