--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-REACT_APP_API_URL=https://smarttask-backend-tcsj.onrender.com/api
+REACT_APP_ENVIRONMENT=development
+REACT_APP_API_URL=http://localhost:5500/api
+PORT=3000
+REACT_APP_DEBUG=true
