--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "smarttask-frontend",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "homepage": "/",
-  "proxy": "https://smarttask-backend-tcsj.onrender.com",
   "dependencies": {
-  "apexcharts": "3.35.0",
-  "axios": "^0.21.1",
-  "google-auth-library": "^8.8.0",
-  "react": "^17.0.2",
-  "react-apexcharts": "1.4.0",
-  "react-dom": "^17.0.2",
-  "react-icons": "^5.2.1",
-  "react-router-dom": "^5.2.0",
-  "react-scripts": "4.0.3",
-  "serve": "^14.2.0",
-  "sweetalert2": "^11.12.1"
+    "apexcharts": "^3.35.0",
+    "axios": "^0.27.2",
+    "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sweetalert2": "^11.7.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build && cp _redirects build/",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider REACT_APP_ENVIRONMENT=development react-scripts start",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider REACT_APP_ENVIRONMENT=development react-scripts start",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "16.x || 18.x",
+    "npm": ">=8.0.0"
   }
 }
