--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
   "name": "smarttask-frontend",
-  "version": "2.0.0",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "/",
   "dependencies": {
-    "apexcharts": "^3.35.0",
-    "axios": "^0.27.2",
-    "react": "^17.0.2",
-    "react-apexcharts": "^1.4.0",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^5.2.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.45.0",
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
-    "sweetalert2": "^11.7.1"
+    "sweetalert2": "^11.7.27",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
   },
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider REACT_APP_ENVIRONMENT=development react-scripts start",
-    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider REACT_APP_ENVIRONMENT=development react-scripts start",
-    "build": "react-scripts build",
-    "build:dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -36,8 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": ">=16.0.0"
   }
 }
