--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.45.0",
     "axios": "^1.4.0",
+    "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
@@ -19,9 +20,6 @@
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3"
   },
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
